Fixed bug #42593. The method JOIN_CACHE_BKA_UNIQUE::join_matching_record calls JOIN_CACHE_BKA::init_join_matching_records that calls the handler function multi_range_read_init. The code before the fix erroneously always passed numbers of records in the join buffer as the third parameter for the call of multi_range_read_init. Yet this parameter must specify the number of ranges passed to the MRR interface for processing. If a join cache of the type JOIN_CACHE_BKA_UNIQUE is employed the number of distinct keys occurred in the records from the join buffer must be passed as the required number of ranges to the function multi_range_read_init. Currently only the NDB implementation of the multi_range_read_init handler function really uses the expected number of ranges.